Added and modified content

--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
                         <a href="./notes" target="_blank">Notes</a>
                     </div>
                     <div>
+                        <a href="./mnotes" target="_blank">Some topics in Mathematics</a>
+                    </div>
+                    <div>
                         <a href="./snotes" target="_blank">Scripting Setup and Tips</a>
                     </div>
                     <div>
