Added contents for dlnotes

--- a/dlnotes/index.html
+++ b/dlnotes/index.html
@@ -22,6 +22,8 @@
     <li><a href="nlp.html">Natural Language Processing</a></li>
     <li><a href="dljs.html">Deep Learning in JS</a></li>
     <li><a href="mljs.html">ml5.js in the Browser</a></li>
+    <li><a href="tensorflow.html">TensorFlow</a></li>
+    <li><a href="pytorch.html">PyTorch</a></li>
   </ul>
 </nav>
 <div class="main-content">
