--- a/dlnotes/mljs.html
+++ b/dlnotes/mljs.html
@@ -19,6 +19,8 @@
     <li><a href="nlp.html">Natural Language Processing</a></li>
     <li><a href="dljs.html">Deep Learning in JS</a></li>
     <li><a href="mljs.html" class="active">ml5.js in the Browser</a></li>
+    <li><a href="tensorflow.html">TensorFlow</a></li>
+    <li><a href="pytorch.html">PyTorch</a></li>
   </ul>
 </nav>
 <div class="main-content">
