--- a/dlnotes/nlp.html
+++ b/dlnotes/nlp.html
@@ -18,6 +18,8 @@
     <li><a href="nlp.html" class="active">Natural Language Processing</a></li>
     <li><a href="dljs.html">Deep Learning in JS</a></li>
     <li><a href="mljs.html">ml5.js in the Browser</a></li>
+    <li><a href="tensorflow.html">TensorFlow</a></li>
+    <li><a href="pytorch.html">PyTorch</a></li>
   </ul>
 </nav>
 <div class="main-content">
