--- a/dlnotes/pytorch.html
+++ b/dlnotes/pytorch.html
@@ -629,13 +629,13 @@ loss = checkpoint['loss']
       <article>
         <h2>12. Resources</h2>
         <ul>
-          <li>Official Documentation: https://pytorch.org/docs/</li>
-          <li>PyTorch Tutorials: https://pytorch.org/tutorials/</li>
-          <li>PyTorch Examples: https://github.com/pytorch/examples</li>
-          <li>PyTorch Forums: https://discuss.pytorch.org/</li>
-          <li>TorchVision (Computer Vision): https://pytorch.org/vision/</li>
-          <li>TorchText (NLP): https://pytorch.org/text/</li>
-          <li>PyTorch Lightning: https://lightning.ai/</li>
+          <li><a href="https://pytorch.org/docs">Official Documentation</a></li>
+          <li><a href="https://pytorch.org/tutorials">PyTorch Tutorials</a></li>
+          <li><a href="https://github.com/pytorch/examples">PyTorch Examples</a></li>
+          <li><a href="https://discuss.pytorch.org">PyTorch Forums</a></li>
+          <li><a href="https://pytorch.org/vision">TorchVision (Computer Vision)</a></li>
+          <li><a href="https://pytorch.org/text">TorchText (NLP)</a></li>
+          <li><a href="https://lightning.ai">PyTorch Lightning</a></li>
         </ul>
       </article>
     </section>
