--- a/dlnotes/tensorflow.html
+++ b/dlnotes/tensorflow.html
@@ -413,10 +413,10 @@ model.fit(x_train, y_train, epochs=50, validation_split=0.2, callbacks=callbacks
       <article>
         <h2>12. Resources</h2>
         <ul>
-          <li>Official Documentation: https://www.tensorflow.org/</li>
-          <li>TensorFlow Tutorials: https://www.tensorflow.org/tutorials</li>
-          <li>Keras Guide: https://keras.io/guides/</li>
-          <li>TensorFlow Hub: https://tfhub.dev/</li>
+          <li><a href=" https://www.tensorflow.org">Official Documentation</a></li>
+          <li><a href="https://www.tensorflow.org/tutorials">TensorFlow Tutorials</a></li>
+          <li><a href="https://keras.io/guides">Keras Guide</a></li>
+          <li><a href="https://tfhub.dev">TensorFlow Hub</a></li>
         </ul>
       </article>
     </section>
