--- a/mnotes/index.html
+++ b/mnotes/index.html
@@ -96,6 +96,10 @@
           <h3>Dirac Braket Notation</h3>
           <p>See inner products, outer products, and quantum state notation in action.</p>
         </a>
+        <a href="calcvar.html" class="card">
+          <h3>Calculus of Variations</h3>
+          <p>Optimize functionals to find extremal paths and derive the Euler-Lagrange equation.</p>
+        </a>
       </div>
     </section>
   </main>
