--- a/mnotes/index.html
+++ b/mnotes/index.html
@@ -100,6 +100,22 @@
           <h3>Calculus of Variations</h3>
           <p>Optimize functionals to find extremal paths and derive the Euler-Lagrange equation.</p>
         </a>
+        <a href="bellman.html" class="card">
+          <h3>Bellman Equation</h3>
+          <p>See how dynamic programming updates value functions for optimal decisions.</p>
+        </a>
+        <a href="mle.html" class="card">
+          <h3>Maximum Likelihood Estimation</h3>
+          <p>Find the parameters that make observed data most probable.</p>
+        </a>
+        <a href="gaussianproc.html" class="card">
+          <h3>Gaussian Process</h3>
+          <p>Model distributions over functions with smooth means and uncertainty bands.</p>
+        </a>
+        <a href="naivebayes.html" class="card">
+          <h3>Naive Bayes</h3>
+          <p>Classify data by combining Bayes' rule with a simple independence assumption.</p>
+        </a>
       </div>
     </section>
   </main>
