--- a/snotes/index.html
+++ b/snotes/index.html
@@ -36,6 +36,8 @@
 <div class="card">
   <h4>If you are interested in other topics once you get familiar with scripting:</h4>
 <ul>
+    <li><a href="https://mosubaga.github.io/intpy" target="_blank">Intermediate Python</a></li>
+    <li><a href="https://mosubaga.github.io/intpl" target="_blank">Intermediate Perl</a></li>
     <li><a href="https://mosubaga.github.io/jscheatsheet" target="_blank">Intro to Javascript/Typescript</a></li>
     <li><a href="https://mosubaga.github.io/mlnotes" target="_blank">Intro to Machine Learning</a></li>
     <li><a href="https://mosubaga.github.io/dlnotes" target="_blank">Intro to Deep Learning</a></li>
